# CppNeuralNetwork

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  Configuration.hpp  main.cpp
